# StockDaily

./: .gitignore  README.md  SKILL.md  advanced_financial_analysis.py  advanced_financial_analysis_simple.py  daily_report_530.sh  daily_report_corrected.sh  daily_report_with_interpretation.sh  data_fetch_only.sh  detailed_analysis_report.py  fetch_historical_data.py  generate_daily_report.sh  generate_final_report.py  generate_full_report.py  generate_report.py  generate_report_on_demand.py  generate_standard_report.py  generate_standard_report_corrected.py  generate_standard_report_final.py  generate_standard_report_fixed.py  investment_analyst_agent.py  local_cron_scheduler.py  multi_agent_coordinator.py  multi_agent_coordinator_simple.py  optimized_report_generator.py  performance_monitor_agent.py  performance_optimizer.py  portfolio_config.example.json  pyproject.toml  qwen-cli-adapter.py  repair_missing_data.py  report_generator_agent.py  requirements.txt  run.ps1  run.sh  simple_scheduler.py  simple_stock_tracker.py  simulate_yesterday_report.py  skill.yaml  smart_daily_report.sh  (+9 more)
doc/: ARCHITECTURE.md  INTERFACES.md  PRD.md  PROJECT_ANALYSIS.md  PUBLIC_DATA_INGESTION.md  TODO.md  TRANSACTIONS_CSV.md  TROUBLESHOOTING.md  data_policy.md
examples/: expected.outputs.md  request.example.json
scripts/: migrate_db.ps1  run_daily.ps1
src/stock/: calc.py  db.py  holdings.py  http.py  ingest.py  (+4 more)
tests/: test_db.py  test_holdings.py  test_ingest.py  test_positions.py  test_report.py  test_report_fallback.py  test_smart_ingest.py  test_sources.py  test_sources_network.py
(+13 files in other folders)
